<resources>
    <string name="app_name">Lansing Table Tennis Club</string>
    <string name="nfc_explain">Hello NFC World!</string>
    <string name="member_completion_hint">Search</string>
    <string name="btn_add_member">Add Member</string>
    <string name="btn_add_transaction">Add Transaction</string>
    <string name="headline_member_list_active">Active Members</string>
    <string name="headline_member_list_all">All Members</string>
    <string name="headline_current_member">Member</string>
    <string name="headline_member_checked_in_list">Playing This Week</string>
    <string name="transaction_subject_member_fee">Member fee</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="headline_transaction_list">All Transactions</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="play_tab_text_1">Check In</string>
    <string name="play_tab_text_2">Players</string>
    <string name="play_tab_text_3">Matches</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="subscribed_to_mailing_list">Subscribed to Mailing List</string>
    <string name="smartcard_id">Smartcard ID</string>
    <string name="is_administrator">Is Administrator</string>
    <string name="last_check_in">Last Check In</string>
    <string name="is_active">Is Active</string>
    <string name="balance">Balance</string>
    <string name="player_1_games">Player 1 Games</string>
    <string name="player_2_games">Player 2 Games</string>
    <string name="subscribe_to_mailing_list">Subscribe to Mailing List</string>
    <string name="subject">Subject</string>
    <string name="amount">Amount</string>
    <string name="go_to_club_administration">Go to club administration</string>
    <string name="member">Member</string>
    <string name="fee">Fee</string>
    <string name="how_much_money">How much money do you put in today?</string>
    <string name="zero_dollar">$0.0</string>
    <string name="five_dollar">$5.0</string>
    <string name="ten_dollar">$10.0</string>
    <string name="twenty_dollar">$20.0</string>
    <string name="do_you_want_change_back">Do you want change back?</string>
    <string name="no_add_to_balance">No, add to my balance</string>
    <string name="members">Members</string>
    <string name="transactions">Transactions</string>
    <string name="description_image_hero">Image of table tennis gear</string>
    <string name="welcome">Welcome</string>
    <string name="msg_auth_admin">If you want to authenticate yourself as an admin, please swipe your smart card or enter your PIN</string>
    <string name="admin_credential">PIN</string>
    <string name="button_ok">OK</string>

    <string name="msg_no_ncf">This device doesn\'t support NFC smart cards</string>
    <string name="msg_nfc_disabled">NFC is disabled, please enable to read smart cards</string>
    <string name="title_add_match_score">Add Match Score</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="msg_adding_match_score">Adding new match score</string>
    <string name="msg_cancelled">Cancelled</string>
    <string name="msg_enter_score">Please enter score (best 3 out of 5)</string>
    <string name="implement_AddMatchScoreDialogListener"> must implement AddMatchScoreDialogListener</string>
    <string name="msg_enter_member_details">Please enter member details</string>
    <string name="msg_addon_smartcard">" for smartcard "</string>
    <string name="title_add_member">Add Member</string>
    <string name="msg_adding_new_member">Adding new member</string>
    <string name="implement_AddMemberDialogListener"> must implement AddMemberDialogListener</string>
    <string name="msg_enter_transaction_details">Please enter transaction details</string>
    <string name="title_add_transaction">Add Transaction</string>
    <string name="msg_adding_new_transaction">Adding new transaction</string>
    <string name="implement_AddTransactionDialogListener">must implement AddTransactionDialogListener</string>
    <string name="title_section_admin">Club Administration</string>
    <string name="msg_last_checkin_error_begin">Last Check-In Date not updated because </string>
    <string name="msg_last_checkin_eror_end"> couldn\'t be parsed into Date</string>
    <string name="msg_balance_error_begin">Balance not updated because </string>
    <string name="msg_balance_error_end"> couldn\'t be parsed into Double</string>
    <string name="msg_error_checkin_member">Error while checking in member </string>
    <string name="msg_added_new_transaction">Added new transaction: </string>
    <string name="msg_error_new_transaction">Unknown Error: Couldn\'t add new transaction</string>
    <string name="implement_AdminBottomSheetDialogListener"> must implement AdminBottomSheetDialogListener</string>
    <string name="implement_OnFragmentInteractionListener"> must implement OnFragmentInteractionListener</string>
    <string name="msg_member_already_checked_in">This member already checked in this week</string>
    <string name="dialog_fee">The fee for playing today is:</string>
    <string name="dialog_balance">Your balance is:</string>
    <string name="title_club_checkin">Club Check-In %s</string>
    <string name="msg_club_checkin_cancelled">Club check-in cancelled</string>
    <string name="implement_CheckInMemberDialogListener"> must implement CheckInMemberDialogListener</string>
    <string name="add_player_1">Add Player 1</string>
    <string name="add_player_2">Add Player 2</string>
    <string name="checked_in_date">Checked in %s</string>
    <string name="msg_added_match">Added match %s : %s</string>
    <string name="msg_error_add_match">Unknown Error: Couldn\'t add new match</string>
    <string name="msg_edit_member_details">Please edit member details for ID %s</string>
    <string name="title_edit_member">Edit a Member</string>
    <string name="msg_editing_member">Editing member</string>
    <string name="implement_EditMemberDialogListener"> must implement EditMemberDialogListener</string>
    <string name="msg_invalid_credentials">Sorry, credentials not valid</string>
    <string name="msg_error_smartcard_not_unique">Error: The smartcard ID %s is assigned to more than one member</string>
    <string name="msg_error_smartcard_not_found">Couldn\'t find a member with the smartcard ID %s</string>
    <string name="msg_only_for_admin">Sorry, only admins can edit</string>
    <string name="dollar_amount">$%s</string>
    <string name="title_weekof">Week %s of %s"</string>
    <string name="msg_added_new_member">Added new member: %s %s</string>
    <string name="msg_error_add_member">Unknown Error: Couldn\'t add new member</string>
    <string name="msg_added_new_checkin_transaction">Added new transaction: %s from %s</string>
    <string name="msg_error_checking_in_member">Error while checking in member %s</string>
    <string name="msg_error_add_match_score">Error while adding match score %s</string>
    <string name="transaction_paid">Paid on %s</string>
    <string name="player_1_not_set">Player 1: n/a</string>
    <string name="player_2_not_set">Player 2: n/a</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="total_balance">Total Balance</string>
    <string name="full_name">FullName</string>
    <string name="n_a">N/A</string>
    <string name="dollar">$%s</string>
    <string name="description_playing_today">Icon for members playing today</string>
    <string name="admin_explanation">If you click on the button below, you will be able to edit data on the club administration screen as long as you don\'t leave that screen. Remember that this is a public device and you have to leave the club administration screen when you are done so everyone else can only view the data.</string>




</resources>
