<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.expertsight.app.lttc.HomeActivity">


    <ImageView
        android:id="@+id/ivHero"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/description_image_hero"
        android:scaleType="centerCrop"
      />

    <TextView
        android:id="@+id/tvWelcomeHeadline"
        android:textAppearance="@style/AppTheme.TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivHero"
        />

    <TextView
        android:id="@+id/tvAdminExplanation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/AppTheme.TextAppearance.Small"
        android:text="@string/msg_auth_admin"
        app:layout_constraintBottom_toTopOf="@+id/tilAdminCredential"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAdminCredential"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeHeadline">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etAdminCredential"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:hint="@string/admin_credential" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnAdminCredential"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/button_ok"
        app:layout_constraintStart_toEndOf="@+id/tilAdminCredential"
        app:layout_constraintTop_toTopOf="@+id/tilAdminCredential" />




    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_nav_height"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/bottomNavViewBar"
        android:background="@drawable/white_grey_border_top"
        app:menu="@menu/bottom_navigation_menu">
    </com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx>


</android.support.constraint.ConstraintLayout>
