<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".CheckInFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilMembers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tvMemberListHeadline" >

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/actvMembers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:completionThreshold="1"
            android:hint="@string/member_completion_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.design.widget.TextInputLayout>



    <TextView
        android:id="@+id/tvMemberListHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        style="@style/AppTheme.TextAppearance.Large"
        android:text="@string/headline_member_list_active"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/tilMembers"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAddMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_add_member"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilMembers" />



        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvMembers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/material_gray_300"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            app:layout_constraintTop_toBottomOf="@+id/tvMemberListHeadline"/>



    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_nav_height"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/bottomNavViewBar"
        android:background="@drawable/white_grey_border_top"
        app:menu="@menu/bottom_navigation_menu">
    </com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx>
</android.support.constraint.ConstraintLayout>
