<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".TransactionFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:completionThreshold="1"
            android:hint="@string/member_completion_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvTotalBalanceHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="Total Balance"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilSearch"
        />

    <TextView
        android:id="@+id/tvTotalBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="$"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvTotalBalanceHeadline"
        app:layout_constraintTop_toBottomOf="@+id/tilSearch"
        />

    <TextView
        android:id="@+id/tvTransactionListHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        style="@style/TextAppearance.AppCompat.Large"
        android:text="@string/headline_transaction_list"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalBalanceHeadline" />

    <Button
        android:id="@+id/btnAddTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_transaction"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalBalanceHeadline"
        app:layout_constraintEnd_toEndOf="parent" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvTransactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/material_gray_300"
        app:layout_constraintTop_toBottomOf="@+id/tvTransactionListHeadline"
        />

</android.support.constraint.ConstraintLayout>
